@startuml

title @Author: Luan Coêlho, Fortech - Sistema de gestão de Manutenção de eletrônicos

class Usuario {
    - id: int
    - nome: string
    - email: string
    - senha: string
    - cpf: string
    - rg: string
    - cnpj: string
    - dataNascimento: DateTime
    - horarioAcesso: DateTime
    - horarioSaida: DateTime
    - admin: bool
    - ativo: bool
}

class Endereco {
    - id: int
    - cep: string
    - rua: string
    - numero: string
    - bairro: string
    - complemento: string
    - cidade: string
    - estado: string
}

class SolicitacaoServico {
    - id: int
    - nome: string
    - detalhes: string
    - valor: decimal
}

class HistoricoServico {
    - id: int
    - descricao: string
}

class TipoServico {
    id: int
    nome: string
}

class Eletronico {
    - id: int
    - nome: string
    - modelo: string
    - marca: string
    - numeroNotaFiscal: string
    - dataFabricao: DateTime
    - detalhes: string
    - foto: string
    - observacoes: string
}

class Log {
    id: int
    dataHora: DateTime
    descricao: string
    idUsuario: int
}

Usuario "1" *-down-> "*" Endereco
Usuario "1" *-> "*" SolicitacaoServico

SolicitacaoServico "*" --> "1" TipoServico
SolicitacaoServico "1" *-> "1" Eletronico

HistoricoServico "1" --> "1" SolicitacaoServico

@enduml
